--- a/src/styles/home-page/home-page.scss
+++ b/src/styles/home-page/home-page.scss
@@ -1,8 +1,51 @@
 
 @use "../variables.scss" as *;
+@use "full-name";
 
 .home-page {
+    margin-top: 5rem;
     border: 2px solid blue;
     min-height: 100vh;
     width: min(100%, var(--app-max-width));
+}
+
+.home-header {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 20rem 5rem;
+    gap: 1rem;
+    height: 25rem;
+    outline: 1px solid lime;
+
+    @media (min-width: $mobile) {
+        & {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: 25rem;
+        }
+    }
+
+    & > div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid red;
+
+        .profile-picture {
+            background: linear-gradient(blue, purple);
+            height: 100%;
+            aspect-ratio: 1 / 1;
+            border-bottom-right-radius: 100%;
+            border-bottom-left-radius: 20%;
+            border-top-left-radius: 30%;
+            border-top-right-radius: 35%;
+        }
+
+        .profile-title {
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+    }
 }
