--- a/src/styles/home-page/home-page.scss
+++ b/src/styles/home-page/home-page.scss
@@ -1,9 +1,10 @@
 
 @use "../variables.scss" as *;
 @use "full-name";
+@use "profile-picture";
+@use "profetion";
 
 .home-page {
-    margin-top: 5rem;
     border: 2px solid blue;
     min-height: 100vh;
     width: min(100%, var(--app-max-width));
@@ -12,15 +13,17 @@
 .home-header {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 20rem 5rem;
-    gap: 1rem;
-    height: 25rem;
+    grid-template-rows: 20rem fit-content;
+    place-content: center;
+    gap: 3rem;
+    height: fit-content;
     outline: 1px solid lime;
+    padding: 2.5rem 0;
 
-    @media (min-width: $mobile) {
+    @media (min-width: $mobile-width) {
         & {
             grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: 25rem;
+            grid-template-rows: 30rem;
         }
     }
 
@@ -28,24 +31,25 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        border: 1px solid red;
+        // border: 1px solid red;
 
-        .profile-picture {
-            background: linear-gradient(blue, purple);
-            height: 100%;
-            aspect-ratio: 1 / 1;
-            border-bottom-right-radius: 100%;
-            border-bottom-left-radius: 20%;
-            border-top-left-radius: 30%;
-            border-top-right-radius: 35%;
+        @media (min-width: $mobile-width) {
+            height: 30rem;
         }
 
         .profile-title {
             height: 100%;
             display: flex;
+            gap: 2rem;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            // font-size: 1.5rem;
 
+            @media (min-width: $mobile-width) {
+                gap: 5rem;
+                // font-size: 2rem;
+            }   
         }
     }
 }
