--- a/src/styles/home-page/home-page.scss
+++ b/src/styles/home-page/home-page.scss
@@ -21,10 +21,12 @@
     padding: 2.5rem 0;
 
     @media (min-width: $mobile-width) {
-        & {
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: 30rem;
-        }
+        grid-template-columns: 1fr 1.5fr;
+        grid-template-rows: 30rem;
+    }
+
+    @media (min-width: $mobile-width) and (max-width: $tablet-width) {
+        gap: 1rem;
     }
 
     & > div {
@@ -44,12 +46,13 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            // font-size: 1.5rem;
 
             @media (min-width: $mobile-width) {
-                gap: 5rem;
-                // font-size: 2rem;
             }   
+
+            @media (min-width: $mobile-width) and (max-width: $tablet-width) {
+                gap: 3rem;
+            }
         }
     }
 }
