--- a/src/styles/home-page/profetion.scss
+++ b/src/styles/home-page/profetion.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 .profetion {
-    --_animation-duration: 3s;
+    --_animation-duration: 2500ms;
     --_text-width: 15rem;
 
     position: relative;
@@ -18,6 +18,12 @@
         --_text-width: 21.5rem;
         height: 2.4rem;
         font-size: 2rem;
+    }
+
+    @media (min-width: $mobile-width) and (max-width: $tablet-width) {
+        --_text-width: 17.25rem;
+        height: 2.2rem;
+        font-size: 1.6rem;
     }
 
     &::before {
@@ -40,15 +46,25 @@
         background: var(--primary-text-color);
 
         @media (min-width: $mobile-width) {
-            width: .2rem;
-            background: red;
+            width: .15rem;
         }
 
-        animation: typing-pointer calc(var(--_animation-duration) + 100ms) linear forwards;
+        animation: 
+           typing-pointer calc(var(--_animation-duration) * 1.8),
+           typing-end calc(var(--_animation-duration) / 2) linear calc(var(--_animation-duration) * 1.8);
 
         @keyframes typing-pointer {
             0% { opacity: 1;}
             100% { opacity: 1;}
+        }
+
+        @keyframes typing-end {
+            0% { opacity: 1; transform: scaleY(1)}
+            20% { opacity: 1; transform: scaleY(0)}
+            40% { opacity: 1; transform: scaleY(1)}
+            60% { opacity: 1; transform: scaleY(0)}
+            80% { opacity: 1; transform: scaleY(1)}
+            100% { opacity: 1; transform: scaleY(1)}
         }
     }
 
