--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,9 +14,10 @@
     --fantacy-font: 'Merienda', cursive;
     --primary-font: 'Poppins', sans-serif;
     --secondary-font: 'Lora', serif;
+    --monospace-font: 'Source Code Pro', monospace;
 
     --app-max-width: 80rem;
 }
 
 $mobile-width: 800px;
-$tablet-width: 1020px;
+$tablet-width: 1130px;
