--- a/src/styles/home-page/home-page.scss
+++ b/src/styles/home-page/home-page.scss
@@ -6,7 +6,7 @@
 
 .home-page {
     border: 2px solid blue;
-    min-height: 100vh;
+    min-height: 200vh;
     width: min(100%, var(--app-max-width));
 }
 
@@ -20,9 +20,11 @@
     outline: 1px solid lime;
     padding: 2.5rem 0;
 
+
     @media (min-width: $mobile-width) {
-        grid-template-columns: 1fr 1.5fr;
+        grid-template-columns: auto 1fr;
         grid-template-rows: 30rem;
+        gap: 0;
     }
 
     @media (min-width: $mobile-width) and (max-width: $tablet-width) {
@@ -34,6 +36,10 @@
         flex-direction: column;
         align-items: center;
         // border: 1px solid red;
+
+        &:first-child {
+            justify-content: flex-end;
+        }
 
         @media (min-width: $mobile-width) {
             height: 30rem;
@@ -48,6 +54,7 @@
             align-items: center;
 
             @media (min-width: $mobile-width) {
+                gap: 4rem;
             }   
 
             @media (min-width: $mobile-width) and (max-width: $tablet-width) {
