--- a/src/styles/home-page/profetion.scss
+++ b/src/styles/home-page/profetion.scss
@@ -2,37 +2,95 @@
 @use "../variables.scss" as *;
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
-.profetion {
-    --_animation-duration: 2500ms;
-    --_text-width: 15rem;
-
+.profetion-text-container {
+    height: 2.5rem;
     position: relative;
-    font-size: 1.4rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.profetion {
+
+    --_name-animation-delay: 3000ms;
+    --_typing-animation-delay: calc(
+        var(--_name-animation-delay) + var(--_word-delay, 0ms)
+    );
+
+    &.front-end{
+        --_animation-duration: 3000ms;
+        --_animation-steps: 9;
+        --_word-length: 10.8rem;
+           
+        @media (max-width: $tablet-width) {
+            --_word-length: 8.5rem;
+        }
+    }
+
+    &.back-end {
+        --_animation-duration: 2600ms;
+        --_animation-steps: 8;
+        --_word-length: 9.5rem;
+        --_word-delay: 3000ms;
+
+        @media (max-width: $tablet-width) {
+            --_word-length: 7.7rem;
+        }
+    }
+
+    &.software-development {
+        --_animation-duration: 1800ms;
+        --_animation-steps: 18;
+        --_word-length: 21.6rem;
+        --_word-delay: 5600ms;
+
+        @media (max-width: $tablet-width) {
+            --_word-length: 17.25rem;
+        }
+
+        animation: 
+            last-child-typing 
+            var(--_animation-duration) 
+            var(--_typing-animation-delay)
+            steps(var(--_animation-steps)) 
+            forwards;
+    }
+
+    position: absolute;
     height: 2rem;
+    font-size: 1.6rem;
     width: 0;
     overflow: hidden;
 
-    animation: typing var(--_animation-duration) steps(18) 2000ms forwards;
+    animation: 
+       typing 
+       var(--_animation-duration) 
+       var(--_typing-animation-delay)
+       steps(var(--_animation-steps));
     
     @media (min-width: $mobile-width) {
         --_text-width: 21.5rem;
-        height: 2.4rem;
+        height: 2.5rem;
         font-size: 2rem;
     }
 
     @media (min-width: $mobile-width) and (max-width: $tablet-width) {
         --_text-width: 17.25rem;
-        height: 2.2rem;
+        height: 2rem;
         font-size: 1.6rem;
     }
 
     &::before {
-        content: attr(area-text);
+        content: attr(word-text); 
         position: absolute;
-        inset: 0 auto 0 0;
-        margin: auto;
+        left: 0;
         width: max-content;
-        font-family: 'Source Code Pro', monospace;
+        font-family: var(--monospace-font);
+
+        background: linear-gradient(90deg, blue, purple);
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
     }
 
     &::after {
@@ -40,37 +98,34 @@
         position: absolute;
         inset: 0 0 0 auto;
         margin: auto;
-        height: 100%;
-        width: .1rem;
-        opacity: 0;
+        height: 80%;
+        width: .08rem;
         background: var(--primary-text-color);
 
-        @media (min-width: $mobile-width) {
-            width: .15rem;
-        }
-
         animation: 
-           typing-pointer calc(var(--_animation-duration) * 1.8),
-           typing-end calc(var(--_animation-duration) / 2) linear calc(var(--_animation-duration) * 1.8);
+            typing-pointer 
+            calc(var(--_animation-duration) + 1000ms)
+            var(--_typing-animation-delay)
+            steps(var(--_animation-steps)) 
+            forwards;
 
         @keyframes typing-pointer {
-            0% { opacity: 1;}
-            100% { opacity: 1;}
-        }
-
-        @keyframes typing-end {
-            0% { opacity: 1; transform: scaleY(1)}
-            20% { opacity: 1; transform: scaleY(0)}
-            40% { opacity: 1; transform: scaleY(1)}
-            60% { opacity: 1; transform: scaleY(0)}
-            80% { opacity: 1; transform: scaleY(1)}
-            100% { opacity: 1; transform: scaleY(1)}
+            0% { transform: scaleY(1);}
+            85% { transform: scaleY(1);}
+            90% { transform: scaleY(0);}
+            95% { transform: scaleY(1);}
+            100% { transform: scaleY(0);}
         }
     }
 
-    @keyframes typing{
-        100% {
-            width: var(--_text-width);
-        }
+    @keyframes typing {
+        0% { width: 0; }
+        30%, 70% { width: var(--_word-length); }
+        100% { width: 0; }
+    }
+
+    @keyframes last-child-typing {
+        0% { width: 0; }
+        100% { width: var(--_word-length); }
     }
 }
