--- a/src/styles/home-page/home-page.scss
+++ b/src/styles/home-page/home-page.scss
@@ -1,65 +1,9 @@
 
-@use "../variables.scss" as *;
-@use "full-name";
-@use "profile-picture";
-@use "profetion";
+@use "../variables" as *;
+@use "home-page-header/home-page-header";
 
 .home-page {
-    border: 2px solid blue;
-    min-height: 200vh;
+    border-inline: 2px solid #ccc;
+    min-height: calc(100vh - 5rem);
     width: min(100%, var(--app-max-width));
-}
-
-.home-header {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 20rem fit-content;
-    place-content: center;
-    gap: 3rem;
-    height: fit-content;
-    outline: 1px solid lime;
-    padding: 2.5rem 0;
-
-
-    @media (min-width: $mobile-width) {
-        grid-template-columns: auto 1fr;
-        grid-template-rows: 30rem;
-        gap: 0;
-    }
-
-    @media (min-width: $mobile-width) and (max-width: $tablet-width) {
-        gap: 1rem;
-    }
-
-    & > div {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        // border: 1px solid red;
-
-        &:first-child {
-            justify-content: flex-end;
-        }
-
-        @media (min-width: $mobile-width) {
-            height: 30rem;
-        }
-
-        .profile-title {
-            height: 100%;
-            display: flex;
-            gap: 2rem;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-
-            @media (min-width: $mobile-width) {
-                gap: 4rem;
-            }   
-
-            @media (min-width: $mobile-width) and (max-width: $tablet-width) {
-                gap: 3rem;
-            }
-        }
-    }
 }
