--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,7 +16,17 @@
     --secondary-font: 'Lora', serif;
     --monospace-font: 'Source Code Pro', monospace;
 
-    --app-max-width: 80rem;
+    --navbar-height: 4rem;
+    --app-max-width: 75rem;
+
+    --spacer-1: .5rem;
+    --spacer-2: 1rem;
+    --spacer-3: 1.5rem;
+    --spacer-4: 2rem;
+    --spacer-5: 2.5rem;
+
+    --cursor-y: 50%;
+    --cursor-x: 50%;
 }
 
 $mobile-width: 800px;
