--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,8 @@
 
 @use "variables" as *;
 
-@use "home-page/home-page";
-@use "navbar/navbar";
+@use "home-page";
+@use "navbar";
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -18,6 +18,7 @@ body {
   font-family: var(--primary-font);
   color: var(--primary-text-color);
   isolation: isolate;
+  overflow-y: scroll;
   
   &::before {
     content: "";
@@ -32,14 +33,8 @@ body {
     z-index: -1;
   }
   
-  @media (min-width: $mobile-width) {
-    & {
-      padding: 0 2.5rem;
-    }
-  }
-
   &::-webkit-scrollbar {
-    width: 8px;
+    width: var(--spacer-1);
     background: var(--app-background);
     opacity: .5;
   }
