--- a/src/styles/navbar/_index.scss
+++ b/src/styles/navbar/_index.scss
@@ -3,14 +3,25 @@
 
 .navbar {
     --_nav-spacer: var(--spacer-2);
-    --_nav_timming-animation: 500ms;
-    --_nav-background: var(--app-background);
+    --_nav_transition-duration: 400ms;
+    --_nav-transition-timming: ease;
+    --_nav-background: transparent;
+
+    // --_nav-gradient-background: linear-gradient(52deg, rgba(163, 163, 163, 0.09) 0%, rgba(163, 163, 163, 0.09) 33.3%,rgba(100, 100, 100, 0.09) 33.3%, rgba(100, 100, 100, 0.09) 66.6%,rgba(162, 162, 162, 0.09) 66.6%, rgba(162, 162, 162, 0.09) 99%),linear-gradient(258deg, rgba(193, 193, 193, 0.06) 0%, rgba(193, 193, 193, 0.06) 33.3%,rgba(169, 169, 169, 0.06) 33.3%, rgba(169, 169, 169, 0.06) 66.6%,rgba(92, 92, 92, 0.06) 66.6%, rgba(92, 92, 92, 0.06) 99%),linear-gradient(129deg, rgba(45, 45, 45, 0.03) 0%, rgba(45, 45, 45, 0.03) 33.3%,rgba(223, 223, 223, 0.03) 33.3%, rgba(223, 223, 223, 0.03) 66.6%,rgba(173, 173, 173, 0.03) 66.6%, rgba(173, 173, 173, 0.03) 99%),linear-gradient(280deg, rgba(226, 226, 226, 0.06) 0%, rgba(226, 226, 226, 0.06) 33.3%,rgba(81, 81, 81, 0.06) 33.3%, rgba(81, 81, 81, 0.06) 66.6%,rgba(186, 186, 186, 0.06) 66.6%, rgba(186, 186, 186, 0.06) 99%),linear-gradient(85deg, rgba(225, 225, 225, 0.04) 0%, rgba(225, 225, 225, 0.04) 33.3%,rgba(95, 95, 95, 0.04) 33.3%, rgba(95, 95, 95, 0.04) 66.6%,rgba(39, 39, 39, 0.04) 66.6%, rgba(39, 39, 39, 0.04) 99%),linear-gradient(128deg, rgba(184, 184, 184, 0.06) 0%, rgba(184, 184, 184, 0.06) 33.3%,rgba(0, 0, 0, 0.06) 33.3%, rgba(0, 0, 0, 0.06) 66.6%,rgba(140, 140, 140, 0.06) 66.6%, rgba(140, 140, 140, 0.06) 99.89999999999999%),linear-gradient(323deg, rgba(40, 40, 40, 0.07) 0%, rgba(40, 40, 40, 0.07) 33.3%,rgba(214, 214, 214, 0.07) 33.3%, rgba(214, 214, 214, 0.07) 66.6%,rgba(190, 190, 190, 0.07) 66.6%, rgba(190, 190, 190, 0.07) 99.89999999999999%),linear-gradient(61deg, rgba(230, 230, 230, 0) 0%, rgba(230, 230, 230, 0) 33.3%,rgba(241, 241, 241, 0) 33.3%, rgba(241, 241, 241, 0) 66.6%,rgba(55, 55, 55, 0) 66.6%, rgba(55, 55, 55, 0) 99%),linear-gradient(0deg, #2625e3,#0bbaef);
+    --_nav-gradient-background: linear-gradient(45deg, blue, purple);
 
     height: var(--navbar-height);
-    width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
+    position: sticky;
+    top: 0;z-index: 200;
+
     background: var(--_nav-background);
     display: flex;
-    padding: 0 var(--_nav-spacer);
+    width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
+
+
+    @media ($mobile-width >= width) {
+        width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
+    }
 
     .navbar-links {
         display: flex;
@@ -19,19 +30,17 @@
         align-items: center;
         margin-left: auto;
 
-        transform: perspective(1000px);
-        transform-style: preserve-3d;
-        & * { transform-style: preserve-3d; }
-        padding: 0 2rem;
-
         .navbar-link {
             text-decoration: none;
             color: inherit;
-            height: 100%;
+            height: calc(var(--navbar-height) / 1.3);
             padding: 0 var(--_nav-spacer);
-            
-            // outline: 1px solid lime;
 
+            transform: perspective(500px);
+            transform-style: preserve-3d;
+            & * { transform-style: preserve-3d; }
+                
+            // Mobile Styles Only
             @media (width <= $mobile-width) {
                 padding: 0;
 
@@ -53,6 +62,7 @@
                 }
             }
 
+            // Desktop Styles Only
             @media (width >= $mobile-width) {
                 position: relative;
 
@@ -65,16 +75,22 @@
             }
         }
 
+        .selected .front::before {
+            background: var(--_nav-gradient-background);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+
+        }
+
         @media (width >= $mobile-width) {
 
-            .navbar-link:hover .btn-scene {
-                transform: 
-                    translateZ(calc(var(--navbar-height) / -2))
-                    rotateX(90deg);
+            .navbar-link:not(.selected):hover .btn-scene {
+                transform: rotateX(90deg);
 
                 .front { 
                     --_before-element-translate: var(--navbar-height);
-                    --_after-opacity: 0.5;
+                    --_after-opacity: 0.4;
                 }
 
                 .bottom { 
@@ -86,8 +102,7 @@
             .btn-scene {
                 position: absolute;
                 inset: 0;
-                transition: transform ease var(--_nav_timming-animation);
-                transform: translateZ(calc(var(--navbar-height) / -2));
+                transition: transform var(--_nav-transition-timming) var(--_nav_transition-duration);
     
                 .front { 
                     --_x-rotation: 0deg; 
@@ -98,7 +113,7 @@
                 .bottom { 
                     --_x-rotation: 270deg; 
                     --_before-element-translate: calc(var(--navbar-height) * -1);
-                    --_after-opacity: 0.5;
+                    --_after-opacity: 0.4;
                 }
     
                 & > :where(.front, .bottom) {
@@ -106,13 +121,13 @@
                     inset: 0;
                     overflow: hidden;
                     background: var(--_nav-background);
-                    box-shadow: 0 0 1rem #0003 inset;
                     isolation: isolate;
 
                     transform: 
                         rotateX(var(--_x-rotation))
-                        translateZ(calc(var(--navbar-height) / 2));
+                        translateZ(calc(var(--navbar-height) / 2.6));
     
+                    &.bottom { background: var(--_nav-gradient-background); }
                     &::before {
                         content: attr(nav-link);
                         position: absolute;
@@ -120,8 +135,9 @@
 
                         display: grid;
                         place-content: center;
+                        word-spacing: .25rem;
 
-                        transition: transform ease calc(var(--_nav_timming-animation) * 2);
+                        transition: transform var(--_nav-transition-timming) calc(var(--_nav_transition-duration) * 1.5);
                         transform: translateY(var(--_before-element-translate))
                     }
 
@@ -135,14 +151,10 @@
                         transform: translateY(var(--_after-element-translate));
 
                         transition: 
-                            opacity ease calc(var(--_nav_timming-animation) * 2),
-                            transform ease calc(var(--_nav_timming-animation) * 2);
+                            opacity ease var(--_nav_transition-duration),
+                            transform ease calc(var(--_nav_transition-duration) * 1.5);
                     }
                 }
-
-                // & > .bottom {
-                //     background-image: url("../../assets/profile-picture.png") !important;
-                // }
             }
         }
     }
