--- a/src/styles/navbar/_index.scss
+++ b/src/styles/navbar/_index.scss
@@ -5,15 +5,12 @@
     --_nav-spacer: var(--spacer-2);
     --_nav_transition-duration: 400ms;
     --_nav-transition-timming: ease;
-    --_nav-background: transparent;
-
-    // --_nav-gradient-background: linear-gradient(52deg, rgba(163, 163, 163, 0.09) 0%, rgba(163, 163, 163, 0.09) 33.3%,rgba(100, 100, 100, 0.09) 33.3%, rgba(100, 100, 100, 0.09) 66.6%,rgba(162, 162, 162, 0.09) 66.6%, rgba(162, 162, 162, 0.09) 99%),linear-gradient(258deg, rgba(193, 193, 193, 0.06) 0%, rgba(193, 193, 193, 0.06) 33.3%,rgba(169, 169, 169, 0.06) 33.3%, rgba(169, 169, 169, 0.06) 66.6%,rgba(92, 92, 92, 0.06) 66.6%, rgba(92, 92, 92, 0.06) 99%),linear-gradient(129deg, rgba(45, 45, 45, 0.03) 0%, rgba(45, 45, 45, 0.03) 33.3%,rgba(223, 223, 223, 0.03) 33.3%, rgba(223, 223, 223, 0.03) 66.6%,rgba(173, 173, 173, 0.03) 66.6%, rgba(173, 173, 173, 0.03) 99%),linear-gradient(280deg, rgba(226, 226, 226, 0.06) 0%, rgba(226, 226, 226, 0.06) 33.3%,rgba(81, 81, 81, 0.06) 33.3%, rgba(81, 81, 81, 0.06) 66.6%,rgba(186, 186, 186, 0.06) 66.6%, rgba(186, 186, 186, 0.06) 99%),linear-gradient(85deg, rgba(225, 225, 225, 0.04) 0%, rgba(225, 225, 225, 0.04) 33.3%,rgba(95, 95, 95, 0.04) 33.3%, rgba(95, 95, 95, 0.04) 66.6%,rgba(39, 39, 39, 0.04) 66.6%, rgba(39, 39, 39, 0.04) 99%),linear-gradient(128deg, rgba(184, 184, 184, 0.06) 0%, rgba(184, 184, 184, 0.06) 33.3%,rgba(0, 0, 0, 0.06) 33.3%, rgba(0, 0, 0, 0.06) 66.6%,rgba(140, 140, 140, 0.06) 66.6%, rgba(140, 140, 140, 0.06) 99.89999999999999%),linear-gradient(323deg, rgba(40, 40, 40, 0.07) 0%, rgba(40, 40, 40, 0.07) 33.3%,rgba(214, 214, 214, 0.07) 33.3%, rgba(214, 214, 214, 0.07) 66.6%,rgba(190, 190, 190, 0.07) 66.6%, rgba(190, 190, 190, 0.07) 99.89999999999999%),linear-gradient(61deg, rgba(230, 230, 230, 0) 0%, rgba(230, 230, 230, 0) 33.3%,rgba(241, 241, 241, 0) 33.3%, rgba(241, 241, 241, 0) 66.6%,rgba(55, 55, 55, 0) 66.6%, rgba(55, 55, 55, 0) 99%),linear-gradient(0deg, #2625e3,#0bbaef);
+    --_nav-background: rgb(4,0,33);
+    --_nav-background-ligth: #ccc5;
     --_nav-gradient-background: linear-gradient(45deg, blue, purple);
 
-    height: var(--navbar-height);
-    position: sticky;
-    top: 0;z-index: 200;
 
+    height: var(--navbar-height);
     background: var(--_nav-background);
     display: flex;
     width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
@@ -25,136 +22,86 @@
 
     .navbar-links {
         display: flex;
-        gap: calc(var(--_nav-spacer) * 2); 
+        gap: calc(var(--_nav-spacer) * 1.5); 
         list-style: none;
         align-items: center;
         margin-left: auto;
 
         .navbar-link {
+            position: relative;
             text-decoration: none;
             color: inherit;
             height: calc(var(--navbar-height) / 1.3);
-            padding: 0 var(--_nav-spacer);
+            background: var(--_nav-background);
+            isolation: isolate;
+            border-radius: .175rem;
+            overflow: hidden;
 
-            transform: perspective(500px);
-            transform-style: preserve-3d;
-            & * { transform-style: preserve-3d; }
-                
-            // Mobile Styles Only
-            @media (width <= $mobile-width) {
-                padding: 0;
-
-                & .btn-scene {
-                    display: none;
-                }
-
-                &::before {
-                    content: attr(nav-link);
-                    position: relative;
-                    top: 0;
-                    height: 100%;
-                    width: 100%;
-                    background: var(--_nav-background);
-
-                    display: flex;
-                    align-items: center;
-                    padding: 0 var(--_nav-spacer);
-                }
-            }
-
-            // Desktop Styles Only
-            @media (width >= $mobile-width) {
-                position: relative;
-
-                &::before {
-                    content: attr(nav-link);
-                    position: relative;
-                    top: 0;
-                    color: transparent;
-                }
-            }
-        }
-
-        .selected .front::before {
-            background: var(--_nav-gradient-background);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-
-        }
-
-        @media (width >= $mobile-width) {
-
-            .navbar-link:not(.selected):hover .btn-scene {
-                transform: rotateX(90deg);
-
-                .front { 
-                    --_before-element-translate: var(--navbar-height);
-                    --_after-opacity: 0.4;
-                }
-
-                .bottom { 
-                    --_before-element-translate: 0;
-                    --_after-opacity: 0;
-                }
-            }
-    
-            .btn-scene {
+            &::before, &::after {
+                content: "";
                 position: absolute;
+                z-index: -1;
+                border-radius: inherit;
+            }
+
+            &::before {
                 inset: 0;
-                transition: transform var(--_nav-transition-timming) var(--_nav_transition-duration);
-    
-                .front { 
-                    --_x-rotation: 0deg; 
-                    --_before-element-translate: 0rem;
-                    --_after-opacity: 0;
-                }
+                background: var(--_nav-gradient-background);
+                opacity: .3;
+            }
 
-                .bottom { 
-                    --_x-rotation: 270deg; 
-                    --_before-element-translate: calc(var(--navbar-height) * -1);
-                    --_after-opacity: 0.4;
-                }
-    
-                & > :where(.front, .bottom) {
-                    position: absolute;
-                    inset: 0;
-                    overflow: hidden;
-                    background: var(--_nav-background);
-                    isolation: isolate;
+            &::after {
+                inset: .125rem;
+                background: var(--_nav-background);
+                transition: opacity var(--_nav_transition-duration) var(--_nav-transition-timming);
+            }
 
-                    transform: 
-                        rotateX(var(--_x-rotation))
-                        translateZ(calc(var(--navbar-height) / 2.6));
-    
-                    &.bottom { background: var(--_nav-gradient-background); }
-                    &::before {
-                        content: attr(nav-link);
-                        position: absolute;
-                        inset: 0;
+            &.selected::before {
+                opacity: 1;
+                margin: auto;
 
-                        display: grid;
-                        place-content: center;
-                        word-spacing: .25rem;
+                @media(width >= $tablet-width) {
+                    animation: 
+                        btn-selected 
+                        calc(var(--_nav_transition-duration) * 2)
+                        linear;
 
-                        transition: transform var(--_nav-transition-timming) calc(var(--_nav_transition-duration) * 1.5);
-                        transform: translateY(var(--_before-element-translate))
-                    }
-
-                    &::after {
-                        content: "";
-                        position: absolute;
-                        inset: 0;
-
-                        background: var(--black-color);
-                        opacity: var(--_after-opacity);
-                        transform: translateY(var(--_after-element-translate));
-
-                        transition: 
-                            opacity ease var(--_nav_transition-duration),
-                            transform ease calc(var(--_nav_transition-duration) * 1.5);
+                    @keyframes btn-selected {
+                        0% { 
+                            inset: 0; 
+                            opacity: 1; 
+                            width: 120%;
+                            margin: auto;
+                            aspect-ratio: 1 / 1;
+                            transform: rotate(0deg);
+                        }
+                        100% { 
+                            inset: -5rem; 
+                            opacity: 1;
+                            width: 120%;
+                            margin: auto;
+                            aspect-ratio: 1 / 1; 
+                            transform: rotate(360deg);
+                        }
                     }
                 }
+            }
+
+            @media(width >= $tablet-width) {
+                &:not(.selected):hover::after {
+                    opacity: .5;
+                }
+            }
+
+            [link-attribute] {
+                display: grid;
+                place-items: center;
+
+                text-decoration: none;
+                color: inherit;
+                height: 100%;
+                width: 100%;
+                padding: 0 var(--_nav-spacer);
             }
         }
     }
