--- a/src/styles/navbar/_index.scss
+++ b/src/styles/navbar/_index.scss
@@ -1,21 +1,64 @@
 
 @use "../variables" as *;
 
+@property --gradient-angle {
+    syntax: "<angle>";
+    initial-value: 45deg;
+    inherits: false;
+}
+
+.navbar-menu-icon {
+    display: none;
+
+    @media (width <= $mobile-width) {
+        display: block;
+        --_unit: 2rem;
+        position: absolute;
+        inset: 1rem 1rem auto auto;
+        height: var(--_unit);
+        width: var(--_unit);
+        z-index: 250;
+        cursor: pointer;
+    }
+}
+
 .navbar {
+    --_menu-translate-right: 100;
+
     --_nav-spacer: var(--spacer-2);
     --_nav_transition-duration: 400ms;
     --_nav-transition-timming: ease;
     --_nav-background: rgb(4,0,33);
-    --_nav-background-ligth: #ccc5;
     --_nav-gradient-background: linear-gradient(45deg, blue, purple);
 
+    display: flex;
+    width: calc(100% - (var(--spacer-5) / 2));
 
     height: var(--navbar-height);
-    display: flex;
-    width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
 
-    @media ($mobile-width >= width) {
+    // Styles mobile only
+    @media (width <= $mobile-width) {
+        display: none;
+        position: fixed;
+        right: 0;
+        height: 100%;
+        width: min(calc(100% - 5rem), 25rem);
+        z-index: 200;
+        background: hsl(247 100% 6% / .5);
+        backdrop-filter: blur(.5rem);
+
+        flex-direction: column;
+        padding-top: calc(var(--_nav-spacer) * 5);
+        padding-inline: calc(var(--_nav-spacer) * 2);
+
+        transition: transform ease-out var(--_nav_transition-duration);
+        transform: translateX(calc(var(--_menu-translate-right) * 1%));
+    }
+
+    // Styles desktop only
+    @media (width >= $mobile-width) {
         width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
+        font-size: 1rem;
     }
 
     .navbar-links {
@@ -25,14 +68,29 @@
         align-items: center;
         margin-left: auto;
 
+        @media(width >= $tablet-width) {
+            gap: calc(var(--_nav-spacer) * 2.5); 
+        }
+
+        @media(width <= $mobile-width) {
+            flex-direction: column;
+            width: 100%;
+            justify-content: center;
+        }
+
         .navbar-link {
             position: relative;
             text-decoration: none;
             color: inherit;
-            height: calc(var(--navbar-height) / 1.3);
+            height: calc(var(--navbar-height) / 1.7);
             isolation: isolate;
             border-radius: .175rem;
-            overflow: hidden;
+
+            @media(width <= $mobile-width) {
+                height: calc(var(--navbar-height) * 1.7);
+                width: 100%;
+            }
+
 
             &::before, &::after {
                 content: "";
@@ -53,39 +111,33 @@
                 transition: opacity var(--_nav_transition-duration) var(--_nav-transition-timming);
             }
 
+            &.selected { pointer-events: none; }
             &.selected::before {
                 opacity: 1;
                 margin: auto;
+                background: var(--_selected-btn-gradient);
+                filter: blur(1.5px);
 
-                @media(width >= $tablet-width) {
-                    animation: 
-                        btn-selected 
-                        calc(var(--_nav_transition-duration) * 2)
-                        linear;
+                --_selected-btn-gradient: conic-gradient(
+                    from var(--gradient-angle),
+                    hsl(300, 100%, 25%),
+                    hsl(240, 100%, 50%),
+                    hsl(300, 100%, 25%)
+                );
 
-                    @keyframes btn-selected {
-                        0% { 
-                            inset: 0; 
-                            opacity: 1; 
-                            width: 120%;
-                            margin: auto;
-                            aspect-ratio: 1 / 1;
-                            transform: rotate(0deg);
-                        }
-                        100% { 
-                            inset: -5rem; 
-                            opacity: 1;
-                            width: 120%;
-                            margin: auto;
-                            aspect-ratio: 1 / 1; 
-                            transform: rotate(360deg);
-                        }
-                    }
+                animation: 
+                    btn-selected 
+                    calc(var(--_nav_transition-duration) * 3)
+                    linear;
+
+                @keyframes btn-selected {
+                    0% { --gradient-angle: 45deg; }
+                    100% { --gradient-angle: 405deg; }
                 }
             }
 
             @media(width >= $tablet-width) {
-                &:not(.selected):hover::after {
+                &:not(.selected):is(:hover, :focus)::after {
                     opacity: .5;
                 }
             }
@@ -104,18 +156,18 @@
     }
 }
 
-.get-up-btn-section {
-    position: fixed;
-    bottom: 0;
-    width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
-    outline: 1px solid lime;
-    z-index: -1;
+// .get-up-btn-section {
+//     position: fixed;
+//     bottom: 0;
+//     width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
+//     outline: 1px solid lime;
+//     z-index: -1;
 
-    display: flex;
-    justify-content: flex-end;
+//     display: flex;
+//     justify-content: flex-end;
 
 
-    .get-up-btn {
-        z-index: 2000;
-    }
-}
+//     .get-up-btn {
+//         z-index: 2000;
+//     }
+// }
