--- a/src/styles/home-page/_index.scss
+++ b/src/styles/home-page/_index.scss
@@ -1,13 +1,4 @@
 
 @use "../variables" as *;
 @use "home-page-header";
-
-.home-page {
-    border-inline: 2px solid #ccc;
-    min-height: calc(100vh - var(--navbar-height));
-    width: calc(100% - (var(--spacer-5) / 2));
-    
-    @media (width >= $mobile-width) {
-        width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
-    }
-}
+@use "table-of-content";
