--- a/src/styles/home-page/home-page-header/full-name.scss
+++ b/src/styles/home-page/home-page-header/full-name.scss
@@ -2,6 +2,9 @@
 @use "../../variables" as *;
 
 .profile-name-container {
+    --animation-duration: 500ms;
+    --letter-delay: calc(var(--animation-duration) / 2.5);
+
     position: relative;
     display: flex;
     gap: var(--spacer-2);
@@ -9,23 +12,21 @@
     justify-content: center;
     font-family: var(--primary-font);
     font-weight: bold;
-    perspective: 1000px;
     font-size: 3.5rem;
-
-    & * {
-        transform-style: preserve-3d;
-    }
 
     &::before {
         content: "";
         position: absolute;
-        inset: 0;
+        inset: 1rem 5rem;
+        background: var(--app-background-gradient);
+        opacity: .2;
+        filter: blur(55px);
     }
 
 
     @for $i from 0 to 8 {
         & .single-letter:nth-child(#{$i + 1}) {
-            --letter-delay: #{100 * $i}ms;
+            --_letter-delay: var(--letter-delay) * #{$i};
         }
     }
 
@@ -39,7 +40,13 @@
         gap: var(--spacer-1);
     }
 
+
     .single-word {
+
+        &:last-of-type {
+            --_word-delay: calc(var(--letter-delay) * 8);
+        }
+
         display: flex;
         gap: var(--spacer-1);
 
@@ -47,21 +54,17 @@
             line-height: .9;
             opacity: 0;
             transform-origin: center;
-            animation: single-letter 700ms linear calc(var(--letter-delay) + var(--word-delay)) forwards;
-            text-shadow: 
-               .5rem .5rem 5rem hsla(240, 50%, 25%, 0.4),
-               1rem 1rem 5rem hsla(300, 100%, 25%, 0.4);
+
+            animation: single-letter var(--animation-duration) ease-out calc(var(--_letter-delay) + var(--_word-delay, 0ms)) forwards;
 
             @keyframes single-letter {
                 0% {
                     opacity: 0;
-                    transform: rotateY(5deg) translateZ(70rem);                
-
+                    transform: translateY(10rem) rotate(45deg); 
                 }
                 100% {
                     opacity: 1;
-                    transform: rotateY(0) translateZ(0);               
-                }
+                    transform: translateY(0) rotate(0);                 }
             }
         }
     }
