--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 
 @use "home-page";
 @use "navbar";
+@use "footer";
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -14,7 +15,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 200vh;
+  min-height: 100vh;
   font-family: var(--primary-font);
   color: var(--primary-text-color);
   isolation: isolate;
@@ -46,4 +47,14 @@ body {
   &::-webkit-scrollbar-thumb {
     background: var(--app-background);
    }
+}
+
+.home-page {
+  border-inline: 2px solid #ccc;
+  min-height: calc(100vh - (var(--navbar-height) + var(--footer-height)));
+  width: calc(100% - (var(--spacer-5) / 2));
+  
+  @media (width >= $mobile-width) {
+      width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
+  }
 }
