--- a/src/styles/navbar/_index.scss
+++ b/src/styles/navbar/_index.scss
@@ -137,7 +137,7 @@
             }
 
             @media(width >= $tablet-width) {
-                &:not(.selected):is(:hover, :focus)::after {
+                &:has([link-attribute]:is(:hover, :focus)):not(.selected)::after {
                     opacity: .5;
                 }
             }
@@ -151,6 +151,8 @@
                 height: 100%;
                 width: 100%;
                 padding: 0 var(--_nav-spacer);
+                border: none;
+                outline: none;
             }
         }
     }
