--- a/src/styles/home-page/table-of-content/_index.scss
+++ b/src/styles/home-page/table-of-content/_index.scss
@@ -1,8 +1,9 @@
 
 @use "../../variables" as *;
-@use "grid-content";
+@use "grid-card";
 
 .table-of-content {
+    position: relative;
     outline: 2px solid lime;
     padding: calc(var(--spacer-5) * 4) 0 ;
 
@@ -10,9 +11,47 @@
 
         display: flex;
         align-items: center;
+        justify-content: space-between;
      
-        perspective: 500px;
+        perspective: 1000px;
+        perspective-origin: right;
         & * { transform-style: preserve-3d }
+    }
+
+    &__grid-content {
+        --_grid-content-unit: calc(var(--_page-content-width) / 10);
+
+        position: absolute;
+        inset: 0 0 0 auto;
+        margin: auto;
+
+        flex: none;
+        background: var(--app-background);
+        border-radius: .5rem;
+        
+        @media (width >= $mobile-width) {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(9, 1fr);
+            grid-template-areas: 
+            "frontend-mentor frontend-mentor codepen"
+            "frontend-mentor frontend-mentor codepen"
+            "frontend-mentor frontend-mentor codepen"
+            "frontend-mentor frontend-mentor codepen"
+            "frontend-mentor frontend-mentor codepen"
+            "studies               email-me email-me"
+            "studies               email-me email-me"
+            "studies               email-me email-me"
+            "studies               email-me email-me"
+            ;
+            padding: 1.5rem;
+            gap: 1rem;
+
+            width: calc(var(--_grid-content-unit) * 8);
+            height: 35rem;
+            transform-origin: 100% 50%;
+            transform: rotateY(-20deg) translateX(-5rem);
+        }
     }
 
 
