Add the title to the home page grid table

--- a/src/styles/home-page/home-page-header/full-name.scss
+++ b/src/styles/home-page/home-page-header/full-name.scss
@@ -20,7 +20,7 @@
         inset: 1rem 5rem;
         background: var(--app-background-gradient);
         opacity: .2;
-        filter: blur(55px);
+        filter: blur(3.5rem);
     }
 
 
