--- a/src/styles/home-page/table-of-content/_index.scss
+++ b/src/styles/home-page/table-of-content/_index.scss
@@ -4,11 +4,12 @@
 
 .table-of-content {
     position: relative;
-    outline: 2px solid lime;
     padding: calc(var(--spacer-5) * 4) 0 ;
+    margin-block: 15rem;
 
     @media (width >= $mobile-width) {
 
+        height: 100vh;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -25,24 +26,34 @@
         inset: 0 0 0 auto;
         margin: auto;
 
-        flex: none;
+        display: grid;
         background: var(--app-background);
         border-radius: .5rem;
+
+        @media (width <= $mobile-width) {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            grid-template-areas: 
+            "cell-one     cell-one"
+            "cell-two     cell-two"
+            "cell-three cell-three"
+            ;
+            gap: 1rem;
+        }
         
         @media (width >= $mobile-width) {
-            display: grid;
             grid-template-columns: repeat(3, 1fr);
             grid-template-rows: repeat(9, 1fr);
             grid-template-areas: 
-            "frontend-mentor frontend-mentor codepen"
-            "frontend-mentor frontend-mentor codepen"
-            "frontend-mentor frontend-mentor codepen"
-            "frontend-mentor frontend-mentor codepen"
-            "frontend-mentor frontend-mentor codepen"
-            "studies               email-me email-me"
-            "studies               email-me email-me"
-            "studies               email-me email-me"
-            "studies               email-me email-me"
+            "cell-one cell-one      cell-two"
+            "cell-one cell-one      cell-two"
+            "cell-one cell-one      cell-two"
+            "cell-one cell-one      cell-two"
+            "cell-one cell-one      cell-two"
+            "cell-three  cell-four cell-four"
+            "cell-three  cell-four cell-four"
+            "cell-three  cell-four cell-four"
+            "cell-three  cell-four cell-four"
             ;
             padding: 1.5rem;
             gap: 1rem;
@@ -50,20 +61,50 @@
             width: calc(var(--_grid-content-unit) * 8);
             height: 35rem;
             transform-origin: 100% 50%;
-            transform: rotateY(-20deg) translateX(-5rem);
+            transform: rotateY(-20deg);
         }
     }
 
 
     &__title {
-        outline: 1px solid blue;
+        --_margin-unit: 2.5rem;
+        position: relative;
 
         @media (width >= $tablet-width) {
-            font-size: 4.5rem;
+            font-size: 5.7rem;
             width: min-content;
 
             display: flex;
             flex-direction: column;
+        }
+
+        .word-one {
+            margin-left: var(--_margin-unit);
+        }
+
+        .word-two {
+            align-self: flex-end;
+            margin-right: var(--_margin-unit);
+            background: linear-gradient(
+                90deg,
+                hsl(300, 100%, 25%),
+                hsl(240, 100%, 50%)
+            );
+            background-clip: text;
+            color: transparent;
+        }
+
+        &::before {
+            position: absolute;
+            content: "";
+            inset: 1rem;
+            transform: translateZ(-1px);
+            background: linear-gradient(
+                -45deg,
+                hsla(300, 100%, 25%, 0.207),
+                hsl(240, 100%, 50%, 0.207)
+            );
+            filter: blur(3.5rem);
         }
     }
 }
