--- a/src/styles/home-page/table-of-content/grid-card.scss
+++ b/src/styles/home-page/table-of-content/grid-card.scss
@@ -55,7 +55,7 @@
         display: grid;
         place-items: center;
         font-size: 2rem;
-        font-weight: 700;
+        // font-weight: 700;
         position: relative;
         color: var(--white-color);
         z-index: 1;
