--- a/src/styles/home-page/home-page-header/_index.scss
+++ b/src/styles/home-page/home-page-header/_index.scss
@@ -10,12 +10,11 @@
     grid-template-columns: 1fr;
     grid-template-rows: 20rem fit-content;
     place-content: center;
-    gap: 3rem;
+    gap: 5rem;
     height: fit-content;
     padding: 2.5rem 0;
 
-
-    @media (min-width: $mobile-width) {
+    @media (width >= $mobile-width) {
         grid-template-columns: auto 1fr;
         grid-template-rows: 30rem;
         gap: 0;
@@ -29,7 +28,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        // border: 1px solid red;
 
         &:first-child {
             @media (min-width: $mobile-width) {
