--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,7 +19,7 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  font-family: var(--primary-font);
+  // font-family: var(--primary-font);
   color: var(--primary-text-color);
   isolation: isolate;
   overflow-y: scroll;
