--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,10 @@
 @use "variables" as *;
 
 @use "home-page";
+@use "studies";
 @use "navbar";
 @use "footer";
+
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -19,7 +21,6 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  // font-family: var(--primary-font);
   color: var(--primary-text-color);
   isolation: isolate;
   overflow-y: scroll;
@@ -54,11 +55,16 @@ body {
 }
 
 .home-page {
+  --_spacing-section-unit: 15rem;
   --_page-content-width: calc(100% - (var(--spacer-5) / 2));
   @media (width >= $mobile-width) {
     --_page-content-width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
   }
 
+  display: flex;
+  flex-direction: column;
+  gap: var(--_spacing-section-unit);
+  padding-bottom: var(--_spacing-section-unit);
   // border-inline: 2px solid #ccc;
   min-height: calc(100vh - (var(--navbar-height) + var(--footer-height)));
   width: var(--_page-content-width);
