Modified: navbar styles

--- a/src/styles/home-page/tech-card/_index.scss
+++ b/src/styles/home-page/tech-card/_index.scss
@@ -91,7 +91,7 @@
         width: 100%;
         border-radius: inherit;
         object-fit: cover;
-        filter: brightness(.2);
+        // filter: brightness(.4);
         z-index: -1;
       }
   
