--- a/src/styles/home/grid-card.scss
+++ b/src/styles/home/grid-card.scss
@@ -1,4 +1,4 @@
-@use "../../variables" as *;
+@use "../variables" as *;
 
 .purple-300 { --_shadow-color: #C084FC; }
 .purple-400 { --_shadow-color: #985EFF; }
