--- a/src/styles/home/profetion.scss
+++ b/src/styles/home/profetion.scss
@@ -1,5 +1,5 @@
 
-@use "../../variables" as *;
+@use "../variables" as *;
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 .profetion-text-container {
